[gd_scene format=3 uid="uid://b8sw1uer7lmqg"]

[ext_resource type="Script" uid="uid://dshiiob28oppi" path="res://scripts/ui/defeat_screen.gd" id="1_kp3qx"]
[ext_resource type="Texture2D" uid="uid://pvv15w6fylb1" path="res://Art/UI/final fail (Mission Failed).png" id="2_05upv"]
[ext_resource type="AudioStream" uid="uid://ro2gb48jwrhv" path="res://Music/Assets/Music/Masquerblade - Failure.wav" id="2_57v1k"]

[node name="GameOverScreen" type="Control" unique_id=1710817815]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kp3qx")

[node name="ColorRect" type="ColorRect" parent="." unique_id=2040966990]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9843137, 0.9490196, 0.96862745, 1)

[node name="failpng" type="Sprite2D" parent="ColorRect" unique_id=531139025]
position = Vector2(316, 339)
texture = ExtResource("2_05upv")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=895425072]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=382075578]
custom_minimum_size = Vector2(161, 218)
layout_mode = 1
offset_left = 239.5
offset_top = 430.0
offset_right = 400.5
offset_bottom = 648.0
theme_override_constants/separation = 10

[node name="retry" type="Button" parent="VBoxContainer" unique_id=1385302974]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Retry"

[node name="main menu" type="Button" parent="VBoxContainer" unique_id=869408163]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Main Menu"

[node name="quit" type="Button" parent="VBoxContainer" unique_id=1698340587]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=352071406]
stream = ExtResource("2_57v1k")
autoplay = true

[connection signal="pressed" from="VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
